--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             height: 20vh;
             width: 100vw;
             background-size: cover;
-            background-image: url(google-maps.jpg);
+            background-image: url('./html/images/google-maps.jpg');
         }
         #i1{
             height: 4.5vh;
@@ -38,7 +38,7 @@
             margin-top: 0.2vh;
             background-size: cover;
             background-repeat: no-repeat;
-            background-image: url(blank.jpg);
+            background-image: url('./html/images/blank.jpg');
             transform: translate(50vw,-80vh);
             margin-left: 0.2vw;
         }
@@ -151,5 +151,5 @@
     }
     </script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAwFeoybx_cYmAjLKAavubfWGIAQc9WsEs&callback=initMap&libraries=places" ></script>
-<script src="proj.js"></script>
+<script src="./html/js/proj.js"></script>
 </html>
